# sports_ptj

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_favorite_teams.py
backend/config/: settings.py  urls.py
backend/data/: wiki_epl_all_staff.csv
backend/data/club/: all_teams_squad_20251108.csv  summary.json
backend/data/club/AFC_Bournemouth/: squad_20251108.csv
backend/data/player_profiles/: AFC_Bournemouth_profiles.json  Arsenal_profiles.json  Aston_Villa_profiles.json  Brentford_profiles.json  Brighton__Hove_Albion_profiles.json  Burnley_profiles.json  Chelsea_profiles.json  Crystal_Palace_profiles.json  Everton_profiles.json  Fulham_profiles.json  Leeds_United_profiles.json  Liverpool_profiles.json  Manchester_City_profiles.json  Manchester_United_profiles.json  Newcastle_United_profiles.json  Nottingham_Forest_profiles.json  Sunderland_profiles.json  Tottenham_Hotspur_profiles.json  West_Ham_United_profiles.json  Wolverhampton_Wanderers_profiles.json  summary.json
backend/data/standings/: epl_standings_2025_11_28.csv
backend/matches/: models.py  serializers.py  urls.py  views.py
backend/matches/migrations/: 0001_initial.py
backend/players/: models.py  serializers.py  urls.py  views.py
backend/players/migrations/: 0001_initial.py
backend/teams/: models.py  serializers.py  urls.py  views.py
backend/teams/migrations/: 0001_initial.py  0002_staff.py  0003_teamstanding.py
(+27 files in other folders)
